# interview-simulator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  celery_worker.py  docs.md  exceptions.py  models.py  non_technical_documentation.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  exceptions.py  extensions.py  models.py
app/repositories/: __init__.py  feedback_repository.py  file_repository.py  message_repository.py  session_repository.py
app/routes/: __init__.py  document_routes.py  errors.py  feedback_routes.py  interview_routes.py  session_routes.py
app/services/: document_service.py  feedback_service.py  interview_service.py  session_service.py
client/: ai_client.py  ai_provider.py  ai_provider_manager.py  gemini_provider.py  openrouter_provider.py
repositories/: __init__.py  feedback_repository.py  file_repository.py  message_repository.py  session_repository.py
services/: __init__.py  document_service.py  feedback_service.py  interview_service.py  session_service.py
static/css/: main.css
templates/: base.html  feedback.html  index.html  interview.html  landing.html  upload.html
templates/fragments/: chat_messages.html  error.html
tests/: test_document_parser.py  test_document_service.py  test_feedback_service.py  test_interview_service.py  test_session_service.py
utils/: document_parser.py  prompt_templates.py
