[project]
name = "interview-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask[async]>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.49.0",
    "pdfplumber>=0.11.7",
    "pypdf>=6.1.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "ruff>=0.14.4",
    "tenacity>=9.1.2",
    "gunicorn>=23.0.0",
    "uvicorn>=0.38.0",
    "a2wsgi>=1.10.10",
    "hypercorn>=0.18.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[tool.setuptools]
packages = ["client", "repositories", "services", "utils"]
py_modules = ["app", "exceptions", "models"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The global interpreter lock.*:RuntimeWarning",
    "ignore:'_UnionGenericAlias' is deprecated.*:DeprecationWarning:google.genai.types",
]
